--- a/~AutoRecover.xv6_vs.vcxproj
+++ b/~AutoRecover.xv6_vs.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="printf.c" />
     <ClCompile Include="proc.c" />
     <ClCompile Include="rm.c" />
+    <ClCompile Include="semtest.c" />
     <ClCompile Include="sh.c" />
     <ClCompile Include="shutdown.c" />
     <ClCompile Include="spinlock.c" />
